--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.2",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
+    "react-devtools": "^6.1.5",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
